<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidTaining</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="a_string">this is a String</string>
    <string name="pay_summary">Hello, %1$s! You have %2$d new messages</string>

    <string name="wechat">WeChat</string>
    <string name="wechat_bottom_chat">Chats</string>
    <string name="wechat_bottom_contacts">Contacts</string>
    <string name="wechat_bottom_discover">Discover</string>
    <string name="wechat_bottom_me">Me</string>
    <string name="img_desc">img desc</string>
</resources>
